--- a/frontend/templates/add_contacts.html
+++ b/frontend/templates/add_contacts.html
@@ -59,8 +59,8 @@
                 {% for contact in contacts %}
                 <div class="contact-item" data-contact-id="{{ contact.id }}">
                     <div class="contact-avatar">
-                        {% if contact.avatar_url %}
-                        <img src="{{ contact.avatar_url }}" alt="avatar" class="contact-avatar-img">
+                        {% if contact.avatar_data %}
+                        <img src="data:image/png;base64,{{ contact.avatar_data | b64encode }}" alt="Avatar" width="50" height="50">
                         {% else %}
                         <!-- Встроенная иконка -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor"
@@ -72,7 +72,7 @@
                     </div>
                     <div class="contact-info">
                         <div class="contact-name">{{ contact.username }}</div>
-                        <div class="contact-last-msg">—</div> <!-- Можно будет добавить последнее сообщение позже -->
+                        <div class="contact-last-msg">{{ contact.about }}</div> <!-- Можно будет добавить последнее сообщение позже -->
                     </div>
                 </div>
                 {% endfor %}
@@ -112,7 +112,7 @@
                 </div>
                 <div class="nav-item" id="nav-profile">
                     <div class="nav-circle">
-                        <a href="/profile">
+                        <a href="/dash/profile">
                             <i class="fas fa-user"></i>
                         </a>
                     </div>
