--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="nav-item" id="nav-status">
                     <div class="nav-circle">
-                        <a href="/status">
+                        <a href="/dash/status">
                             <i class="fas fa-video"></i>
                         </a>
                     </div>
